# ood

./: CMakeLists.txt
lab1/task1/: build  makefile
lab1/task1/DanceBehavior/: IDanceBehavior.hpp
lab1/task1/DanceBehavior/DanceWaltz/: DanceWaltz.cpp  DanceWaltz.hpp
lab1/task1/DanceBehavior/MinuetDance/: MinuetDance.cpp  MinuetDance.hpp
lab1/task1/DanceBehavior/NoDance/: NoDance.cpp  NoDance.hpp
lab1/task1/Ducks/: Duck.cpp  Duck.hpp
lab1/task1/Ducks/DecoyDuck/: DecoyDuck.hpp
lab1/task1/Ducks/MallardDuck/: MallardDuck.cpp
lab1/task1/FlyBehavior/: IFlyBehavior.hpp
lab1/task1/FlyBehavior/FlyWithWings/: FlyWithWings.cpp  FlyWithWings.hpp
lab1/task1/FlyBehavior/NoFly/: NoFly.cpp  NoFly.hpp
lab1/task3/: main.cpp
lab1/task3/Ducks/: Duck.cpp  Duck.hpp
lab1/task3/Ducks/DecoyDuck/: DecoyDuck.cpp
lab1/task3/Ducks/MallardDuck/: MallardDuck.cpp  MallardDuck.hpp
lab1/task3/Ducks/ReadHeadDuck/: ReadHeadDuck.cpp  ReadHeadDuck.hpp
src/Adapter/src/: main.cpp
src/Adapter/src/App/: App.hpp
src/Adapter/src/GraphicLibAdapter/: GraphicLibAdapter.cpp  GraphicLibAdapter.hpp  GraphicLibAdapterV2.hpp
src/Adapter/src/GraphicsLib/: GraphicLib.hpp
src/Adapter/src/ModernGraphicsLib/: ModernGraphicsLib.hpp
src/Adapter/src/ShapeDrawningLib/: ShapeDrawningLib.hpp
src/Adapter/tests/: main.cpp
src/Command/src/: main.cpp
src/Command/src/Application/: Application.cpp  Application.hpp
src/Command/src/Command/: ICommand.hpp
src/Command/src/CommandHandler/: ICommandHandler.hpp
src/Command/src/CommandHandlerRegistry/: CommandHandlerRegistry.cpp  CommandHandlerRegistry.hpp  ICommandHandlerRegistry.hpp
src/Command/src/Controller/: ControllerType.hpp  IController.hpp
src/Command/src/ControllerCommandsHolder/: ControllerCommandsHolder.cpp  ControllerCommandsHolder.hpp  IControllerCommandsHolder.hpp
src/Command/src/ControllerRegistry/: ControllerRegistry.cpp  ControllerRegistry.hpp  IControllerEnumerator.hpp  IControllerRegistry.hpp
src/Command/src/Document/: Document.cpp  Document.hpp  IDocument.hpp
src/Command/src/History/: CommandsHistory.cpp  CommandsHistory.hpp  ICommandsHistory.hpp
src/Command/src/Resource/: FileResource.cpp  FileResource.hpp
src/Command/tests/: main.cpp
src/Common/Application/: Application.cpp  Application.hpp
src/Common/Application/Input/: IInput.hpp
src/Common/Application/InputDefinition/: IInputDefinition.hpp  InputDefinition.cpp  InputDefinition.hpp
src/Common/Application/Output/: IOutput.hpp
src/Common/Registry/: Registry.hpp
src/Composite/src/: Canvas.h  FillStyle.h  GroupFillStyle.h  ICanvas.h  IOutlineStyle.h  IShape.h  ISlide.h  IStyle.h  OutlineStyle.cpp  OutlineStyle.h  Rectangle.cpp  ShapeGroup.cpp  Triangle.cpp  main.cpp
src/Composite/src/Canvas/: ICanvas.h  ICanvas.hpp  IDrawable.hpp
src/Composite/src/Shape/: Canvas.cpp  Canvas.h  Canvas.hpp  Ellipse.cpp  Ellipse.h  Ellipse.hpp  GroupFillStyle.cpp  IShape.h  IShape.hpp  IShapeGroup.h  IShapeGroup.hpp  IStyle.h  IStyle.hpp  Rectangle.cpp  Rectangle.h  Rectangle.hpp  Shape.cpp  Shape.hpp  ShapeGroup.cpp  ShapeGroup.h  ShapeGroup.hpp  SimpleShape.cpp  SimpleShape.h  Triangle.cpp  Triangle.h  Triangle.hpp
src/Composite/src/Slide/: ISlide.h  ISlide.hpp  Slide.cpp  Slide.h  Slide.hpp
src/Decorator/Beverage/: main.cpp
src/Decorator/Beverage/Beverage/: Beverage.hpp  IBeverage.hpp
src/Decorator/Beverage/Condiments/: Chocolate.hpp  ChocolateLiquor.hpp  Condiments.hpp  Cream.hpp  Liquor.hpp  WalnutLiquor.hpp
src/Decorator/Streams/: main.cpp
src/Decorator/Streams/Application/: TransformApplication.cpp  TransformApplication.hpp
src/Decorator/Streams/Chunk/: Chunk.hpp
src/Decorator/Streams/Compressor/: Compressor.cpp  Compressor.hpp
src/Decorator/Streams/Crypt/: Encoder.cpp  Encoder.hpp  IDecoder.hpp  IEncoder.hpp
src/Decorator/Streams/Input/: IInputDataStream.hpp
src/Decorator/Streams/Output/: IOutputDataStream.hpp
src/Decorator/StreamsTests/: main.cpp
src/Factory/src/: main.cpp
src/Factory/src/Canvas/: Canvas.cpp  Canvas.hpp  ICanvas.hpp
src/Factory/src/Designer/: Designer.cpp  Designer.hpp  IDesigner.hpp
src/Factory/src/Factory/: IShapeFactory.hpp  ShapeFactory.cpp  ShapeFactory.hpp
src/Factory/src/Painter/: Painter.cpp  Painter.hpp
src/Factory/src/PictureDraft/: PictureDraft.cpp  PictureDraft.hpp
src/Factory/src/Shape/: Color.hpp  Point.hpp  Shape.cpp  Shape.hpp
src/MVC/: README.md  pubspec.yaml
src/MVC/android/app/: build.gradle
src/MVC/ios/Runner/: Info.plist
src/MVC/ios/Runner.xcodeproj/: project.pbxproj
src/MVC/lib/: main.dart
src/MVC/lib/common/: rect.dart  size.dart
src/MVC/lib/domain/: canvas.dart  shape.dart
src/MVC/lib/view/: canvas.dart  menu.dart  shape_view.dart
src/MVC/test/: widget_test.dart
src/Observer/: main.cpp
src/Observer/Counter/: AverageCounter.cpp  AverageCounter.hpp  AverageWindDirectionMeter.cpp  AverageWindDirectionMeter.hpp
src/Observer/Display/Display/: Display.cpp  Display.hpp
src/Observer/Display/ExpensiveDisplay/: ExpensiveDisplay.cpp  ExpensiveDisplay.hpp
src/Observer/Display/StatsDisplay/: StatsDisplay.cpp  StatsDisplay.hpp
src/Observer/MemoryIndex/: MemoryIndex.hpp
src/Observer/Observer/: CObserverable.cpp  CObserverable.hpp  IObserver.hpp  Observable.hpp
src/Observer/Sensor/: AverageSensor.cpp  AverageSensor.hpp
src/Observer/WeatherData/: WeatherData.cpp  WeatherData.hpp
src/Observer_test/: main.cpp
src/Observer_test/FewObservableTest/Observer/: MockObserver.cpp  MockObserver.hpp
src/Observer_test/Observer/: MockObserver.cpp  MockObserver.hpp
src/Observer_test/Observerable/: MockObservable.cpp  MockObservable.hpp
src/Observer_test/PriorityTest/Observable/: MockObservable.cpp  MockObservable.hpp
src/Observer_test/PriorityTest/Observer/: MockObserver.cpp  MockObserver.hpp
src/State/src/: main.cpp
src/State/test/: main.cpp
src/Strategy/task1/: main.cpp
src/Strategy/task2/: main.cpp
src/Strategy/task3/: main.cpp
src/Utils/: Arrays.hpp  FileSystem.cpp  FileSystem.hpp  Html.cpp  Html.hpp  Strings.cpp  Strings.hpp
(+236 files in other folders)
